--- a/snippets/collection-template-flash-sale.liquid
+++ b/snippets/collection-template-flash-sale.liquid
@@ -20,16 +20,18 @@
     {%- assign rows = 'products-grid' -%}
 
     {% when '4' %}
-    {%- assign grid_item_width = 'col-6 col-md-4 col-lg-3' -%}
+    {%- assign grid_item_width = 'col-6 col-md-4 col-lg-3 col4' -%}
     {%- assign rows = 'products-grid' -%}
 
     {% when '5' %}
     {%- assign grid_item_width = 'col-6 col-md-4 col-lg-3 col5' -%}
     {%- assign rows = 'products-grid' -%}
   {% endcase %}
-  {% assign with_banner_number = section.settings.collection_results_per_row | times: '2' %}
-  <div id="shopify-section-collection-template-no-sidebar" class="shopify-section col-no-sidebar">
-    {% render 'toolbar' %}
+
+  <div id="shopify-section-collection-template-flash-sale" class="shopify-section col-no-sidebar">
+    {% render 'collection-header' %}
+    {% render 'toolbar-flash-sale' %}
+    {% render 'navigation-flash-sale' %}
     <div id="CollectionProductGrid">
       <div
         data-section-id="{{ section.id }}"
@@ -53,38 +55,6 @@
                   {% render 'product-grid-item' with product as product, serial: forloop.index %}
                 {% endif %}
               </div>
-              {% if forloop.index == with_banner_number and section.settings.show_banner %}
-                <div class="col-12 banner-collection--grid {% if section.settings.img_banner1 == blank %}{% endif %}">
-                  <div class="grid--layout">
-                    {% if section.settings.img_banner1 != blank and section.settings.show_banner_1 %}
-                      <div class="banner {% if section.settings.img_banner2 == blank %}only{% endif %}">
-                        <a
-                          href="{{ section.settings.link_banner_1 }}"
-                          class="adaptive_height"
-                          style="padding-top: {{ 1 | divided_by:  section.settings.img_banner1.aspect_ratio | times: 100 }}%">
-                          <img
-                            data-srcset="{{ section.settings.img_banner1 | img_url: '1024x' }}"
-                            class="lazyload"
-                            alt="{{ section.settings.img_banner1.alt | default: shop.name }}" />
-                        </a>
-                      </div>
-                    {% endif %}
-                    {% if section.settings.img_banner2 != blank and section.settings.show_banner_2 %}
-                      <div class="banner {% if section.settings.img_banner1 == blank %}only{% endif %}">
-                        <a
-                          href="{{ section.settings.link_banner_2 }}"
-                          class="adaptive_height"
-                          style="padding-top: {{ 1 | divided_by:  section.settings.img_banner2.aspect_ratio | times: 100 }}%">
-                          <img
-                            data-srcset="{{ section.settings.img_banner2 | img_url: '1024x' }}"
-                            class="lazyload"
-                            alt="{{ section.settings.img_banner2.alt | default: shop.name }}" />
-                        </a>
-                      </div>
-                    {% endif %}
-                  </div>
-                </div>
-              {% endif %}
             {% endfor %}
           {% else %}
             <p class="col-12 text-center" {% if settings.enable_multilang %}data-translate="collections.general.no_matches"{% endif %}>
@@ -92,6 +62,7 @@
             </p>
           {% endif %}
         </div>
+
 
         {% if paginate.pages > 1 %}
           <div class="padding">
