add discount manager

--- a/sections/main-search.liquid
+++ b/sections/main-search.liquid
@@ -77,7 +77,7 @@
       {% render 'pagination-page' paginate: paginate %}
     </div>
     {% endif %}
-    {% endpaginate %}
+    {% assign dm_paginate_by = paginate.page_size %}{% endpaginate %}
 
     {% else %}
 
@@ -107,3 +107,4 @@
     {% endif %}
   </div>
 </div>
+{% if dm_paginate_by %}{% render 'spurit_dmr_collection_template_snippet', paginate_by: dm_paginate_by %}{% endif %}
